fixed spacing and such

--- a/src/signup.css
+++ b/src/signup.css
@@ -24,6 +24,7 @@
       padding-bottom: 20px;
       background-color: #f1f1f1;
       height: 100%;
+      
     }
 
     /* Set black background color, white text and some padding */
@@ -35,7 +36,10 @@
     }
     /* On small screens, set height to 'auto' for sidenav and grid */
     
-
+div {
+    display: block;
+    margin: auto;
+}
 
 
 .flex-center {
